Initial commit: 重機稼働予測ダッシュボード PoC (dashboard only)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@ Thumbs.db
 # ログ
 *.log
 
+# プロジェクトルートのドキュメントファイル（dashboard/は含める）
+*.md
+!dashboard/**/*.md
+!README.md
+hearing_sheet.csv
+PoC要件定義_重機稼働予測ダッシュボード.md
+データ設計書_重機稼働予測.md
+技術スタック選定_重機稼働予測.md
+画面設計書_重機稼働予測.md
+お客様向け資料作成プロンプト.md
+お客様向け資料作成プロンプト_A4版.md
+デモサイト詳細.md
+ヒアリング項目_重機稼働予測.md
+開発環境セットアップガイド.md
+
